Implementirani testovi za web servise.